# template-rs-cli

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: release.yml  rust.yml
src/: macros.rs  main.rs
src/cmd/: interface.rs  mod.rs  opts.rs
src/cmd/args/: mod.rs  platform.rs  system.rs
src/cnf/: context.rs  mod.rs  settings.rs
